@@ -1,9 +1,17 @@
 /* This file generated by errnos.awk from
      errno.texi
+     stdc-predef.h
+     libc-symbols.h
      mach/message.h
      mach/kern_return.h
+     mach/i386/kern_return.h
+     mach/port.h
+     mach/boolean.h
+     mach/i386/boolean.h
+     mach/i386/vm_types.h
      mach/mig_errors.h
      device/device_types.h
+     mach/std_types.h
    Do not edit this file; edit errnos.awk and regenerate it.  */
 
 #ifndef _BITS_ERRNO_H
