@@ -23,7 +23,8 @@ BEGIN {
     for (i = 1; i < ARGC; i++)
       {
 	arg = ARGV[i];
-	sub(/.*(manual|include)\//, "", arg)
+	sub(/.*(manual|include)\//, "", arg);
+	if (arg ~ /.*errnos.d/) continue;
 	print "     " arg;
       }
     print "   Do not edit this file; edit errnos.awk and regenerate it.  */";
